# $Id: configure.in,v 1.1.1.1 2004-09-01 15:12:44 hww3 Exp $
AC_INIT(module.pmod.in)
AC_CONFIG_HEADER(config.h)

AC_MODULE_INIT()

AC_CHECK_HEADERS(pcap.h)
AC_CHECK_HEADERS(unistd.h)

AC_CHECK_LIB(socket, accept) 
AC_CHECK_LIB(nsl, getservbyname) 
AC_CHECK_LIB(pcap, pcap_open_live) 

AC_CHECK_FUNCS(pcap_lib_version) 
AC_CHECK_FUNCS(pcap_breakloop) 

AC_CHECK_FUNCS(usleep)

AC_SUBST(PCAP_CFLAGS) 
AC_SUBST(PCAP_LIBS)

AC_OUTPUT(Makefile)


